still trying to fix invisible link error...

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -215,7 +215,7 @@
 
 #station_frmt { 
 	position: absolute; 
-	top: 96.5%;
+	top: 96.3%;
 	left: 67.4%;
 	.stationLink {
 		font-size: 2em;
@@ -278,7 +278,7 @@
 
 #station_mlbr { 
 	position: absolute; 
-	top: 89.4%;
+	top: 89.2%;
 	left: 19.5%;
 	.stationLink {
 		font-size: 2em;
@@ -442,6 +442,6 @@
 	top: 45%;
 	left: 28%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 2em;
 	}
 }
